Modified the header and cleaned up the home page. Each now only Includes what we need for our purposes. Other content was commented out for possible future use.

--- a/FowlerSite/Views/Shared/_Layout.cshtml
+++ b/FowlerSite/Views/Shared/_Layout.cshtml
@@ -70,42 +70,30 @@
                     <ul class="nk-nav nk-nav-center d-none d-md-table-cell" data-nav-mobile="#nk-nav-mobile">
 
                         <li class=" nk-drop-item">
-                            <a asp-controller="Home" asp-action="Index">
-                                Home
-                            </a>
+                            <a asp-controller="Home" asp-action="Index">Home</a>
                         </li>
                         <li class=" nk-drop-item">
-                            <a asp-area="" asp-controller="Games" asp-action="Index">
-                                Games
-                            </a>
+                            <a asp-area="" asp-controller="Games" asp-action="Index">Games</a>
                         </li>
                         <li class=" nk-drop-item">
-                            <a asp-controller="Store" asp-action="Index">
-                                Store
-                            </a>
-                            <ul class="dropdown">
-                                <li>
-                                    <a asp-controller="Store" asp-action="Index">Store</a>
-                                </li>
-
-                                <li>
-                                    <a asp-controller="Store" asp-action="StoreCatalog">Catalog</a>
-                                </li>
-                                <li>
-                                <a asp-area="" asp-controller="Store" asp-action="StoreCart">
-                                    Cart
-                                </a>
-                                <a asp-area="" asp-controller="Store" asp-action="StoreCheckout">
-                                    Checkout
-                                </a>
-                                <a asp-controller="Store" asp-action="StoreProduct">
-                                    Product
-                                </a>
-                            </ul>
-                            <li class=" nk-drop-item">
-                                <a asp-controller="Home" asp-action="ContactUs">Contact Us</a>
-                             </li>
-</ul>
+                            <a asp-controller="Store" asp-action="Index">Store</a>
+                        </li>
+                        <!--li class=" nk-drop-item">
+                            <a asp-controller="Store" asp-action="StoreCatalog">Catalog</a>
+                        </!--li>
+                        <li class=" nk-drop-item">
+                            <a asp-area="" asp-controller="Store" asp-action="StoreCart">Cart</a>
+                        </li>
+                        <li class=" nk-drop-item">
+                            <a asp-area="" asp-controller="Store" asp-action="StoreCheckout">Checkout</a>
+                        </li-->
+                        <li class=" nk-drop-item">
+                            <a asp-controller="Store" asp-action="StoreProduct">Product</a>
+                        </li>
+                        <li class=" nk-drop-item">
+                            <a asp-controller="Home" asp-action="ContactUs">Contact Us</a>
+                        </li>
+                    </ul>
                     <ul class="nk-nav nk-nav-right nk-nav-icons">
 
                         <li class="single-icon d-lg-none">
