--- a/FowlerSite/Views/Home/Index.cshtml
+++ b/FowlerSite/Views/Home/Index.cshtml
@@ -1,4 +1,6 @@
-﻿<!DOCTYPE html>
+﻿@model IEnumerable<DataAccessLibrary.Models.Game>
+
+<!DOCTYPE html>
 
 
 <html lang="en">
@@ -241,12 +243,12 @@
                 </div>
             </div>
             <!-- END: Categories -->
-            <!-- START: Latest News -->
+            <!-- START: Latest Additions -->
             <div class="nk-gap-2"></div>
-            <h3 class="nk-decorated-h-2"><span><span class="text-main-1">Latest</span> News</span></h3>
-            <div class="nk-gap"></div>
+            <h3 class="nk-decorated-h-2"><span><span class="text-main-1">Latest</span> Additions</span></h3>
+            @*<div class="nk-gap"></div>*@
 
-            <div class="nk-news-box">
+            <!--<div class="nk-news-box">
                 <div class="nk-news-box-list">
                     <div class="nano">
                         <div class="nano-content">
@@ -370,9 +372,9 @@
                 </div>
                 <div class="nk-news-box-each-info">
                     <div class="nano">
-                        <div class="nano-content">
+                        <div class="nano-content">-->
                             <!-- There will be inserted info about selected news-->
-                            <div class="nk-news-box-item-image">
+                            <!--<div class="nk-news-box-item-image">
                                 <img src="assets/images/post-1.jpg" alt="">
                                 <span class="nk-news-box-item-categories">
                                     <span class="bg-main-4">MMO</span>
@@ -389,7 +391,7 @@
                         </div>
                     </div>
                 </div>
-            </div>
+            </div>-->
 
             <div class="nk-gap-2"></div>
             <div class="nk-blog-grid">
@@ -497,22 +499,22 @@
 
                 </div>
             </div>
-            <!-- END: Latest News -->
+            <!-- END: Latest Additions -->
 
-            <div class="nk-gap-2"></div>
+            <!--<div class="nk-gap-2"></div>
             <div class="row vertical-gap">
-                <div class="col-lg-8">
+                <div class="col-lg-8">-->
 
                     <!-- START: Latest Posts -->
-                    <h3 class="nk-decorated-h-2"><span><span class="text-main-1">Latest</span> Posts</span></h3>
+                    <!--<h3 class="nk-decorated-h-2"><span><span class="text-main-1">Latest</span> Posts</span></h3>
                     <div class="nk-gap"></div>
                     <div class="nk-blog-grid">
                         <div class="row">
 
 
-                            <div class="col-md-6">
+                            <div class="col-md-6">-->
                                 <!-- START: Post -->
-                                <div class="nk-blog-post">
+                                <!--<div class="nk-blog-post">
                                     <a href="blog-article.html" class="nk-post-img">
                                         <img src="assets/images/post-5-mid.jpg" alt="He made his passenger captain of one">
                                         <span class="nk-post-comments-count">13</span>
@@ -528,14 +530,14 @@
                                     </div>
                                     <div class="nk-gap"></div>
                                     <a href="blog-article.html" class="nk-btn nk-btn-rounded nk-btn-color-dark-3 nk-btn-hover-color-main-1">Read More</a>
-                                </div>
+                                </div>-->
                                 <!-- END: Post -->
-                            </div>
+                            <!--</div>
 
 
-                            <div class="col-md-6">
+                            <div class="col-md-6">-->
                                 <!-- START: Post -->
-                                <div class="nk-blog-post">
+                                <!--<div class="nk-blog-post">
                                     <a href="blog-article.html" class="nk-post-img">
                                         <img src="assets/images/post-6-mid.jpg" alt="At first, for some time, I was not able to answer">
                                         <span class="nk-post-comments-count">0</span>
@@ -551,15 +553,15 @@
                                     </div>
                                     <div class="nk-gap"></div>
                                     <a href="blog-article.html" class="nk-btn nk-btn-rounded nk-btn-color-dark-3 nk-btn-hover-color-main-1">Read More</a>
-                                </div>
+                                </div>-->
                                 <!-- END: Post -->
-                            </div>
+                            <!--</div>
 
                         </div>
-                    </div>
+                    </div>-->
                     <!-- END: Latest Posts -->
                     <!-- START: Latest Matches -->
-                    <div class="nk-gap-2"></div>
+                    <!--<div class="nk-gap-2"></div>
                     <h3 class="nk-decorated-h-2"><span><span class="text-main-1">Latest</span> Matches</span></h3>
                     <div class="nk-gap"></div>
                     <div class="row">
@@ -684,18 +686,18 @@
                                 </span>
                             </a>
                         </div>
-                    </div>
+                    </div>-->
                     <!-- END: Latest Matches -->
                     <!-- START: Tabbed News  -->
-                    <div class="nk-gap-3"></div>
+                    <!--<div class="nk-gap-3"></div>
                     <h3 class="nk-decorated-h-2"><span><span class="text-main-1">Tabbed</span> News</span></h3>
                     <div class="nk-gap"></div>
-                    <div class="nk-tabs">
+                    <div class="nk-tabs">-->
                         <!--
                             Additional Classes:
                                 .nav-tabs-fill
                         -->
-                        <ul class="nav nav-tabs nav-tabs-fill" role="tablist">
+                        <!--<ul class="nav nav-tabs nav-tabs-fill" role="tablist">
                             <li class="nav-item">
                                 <a class="nav-link active" href="#tabs-1-1" role="tab" data-toggle="tab">Action</a>
                             </li>
@@ -717,11 +719,11 @@
                         </ul>
                         <div class="tab-content">
                             <div role="tabpanel" class="tab-pane fade show active" id="tabs-1-1">
-                                <div class="nk-gap"></div>
+                                <div class="nk-gap"></div>-->
                                 <!-- START: Action Tab -->
 
 
-                                <div class="nk-blog-post nk-blog-post-border-bottom">
+                                <!--<div class="nk-blog-post nk-blog-post-border-bottom">
                                     <a href="blog-article.html" class="nk-post-img">
                                         <img src="assets/images/post-2-fw.jpg" alt="Grab your sword and fight the Horde">
 
@@ -791,19 +793,19 @@
                                             </div>
                                         </div>
                                     </div>
-                                </div>
+                                </div>-->
 
 
 
                                 <!-- END: Action Tab -->
-                                <div class="nk-gap"></div>
+                                <!--<div class="nk-gap"></div>
                             </div>
                             <div role="tabpanel" class="tab-pane fade" id="tabs-1-2">
-                                <div class="nk-gap"></div>
+                                <div class="nk-gap"></div>-->
                                 <!-- START: MMO Tab -->
 
 
-                                <div class="nk-blog-post nk-blog-post-border-bottom">
+                                <!--<div class="nk-blog-post nk-blog-post-border-bottom">
                                     <a href="blog-article.html" class="nk-post-img">
                                         <img src="assets/images/post-1-fw.jpg" alt="Smell magic in the air. Or maybe barbecue">
 
@@ -848,19 +850,19 @@
                                             </div>
                                         </div>
                                     </div>
-                                </div>
+                                </div>-->
 
 
 
                                 <!-- END: MMO Tab -->
-                                <div class="nk-gap"></div>
+                                <!--<div class="nk-gap"></div>
                             </div>
                             <div role="tabpanel" class="tab-pane fade" id="tabs-1-3">
-                                <div class="nk-gap"></div>
+                                <div class="nk-gap"></div>-->
                                 <!-- START: Strategy Tab -->
 
 
-                                <div class="nk-blog-post nk-blog-post-border-bottom">
+                                <!--<div class="nk-blog-post nk-blog-post-border-bottom">
                                     <a href="blog-article.html" class="nk-post-img">
                                         <img src="assets/images/post-3-fw.jpg" alt="We found a witch! May we burn her?">
 
@@ -905,19 +907,19 @@
                                             </div>
                                         </div>
                                     </div>
-                                </div>
+                                </div>-->
 
 
 
                                 <!-- END: Strategy Tab -->
-                                <div class="nk-gap"></div>
+                                <!--<div class="nk-gap"></div>
                             </div>
                             <div role="tabpanel" class="tab-pane fade" id="tabs-1-4">
-                                <div class="nk-gap"></div>
+                                <div class="nk-gap"></div>-->
                                 <!-- START: Adventure Tab -->
 
 
-                                <div class="nk-blog-post nk-blog-post-border-bottom">
+                                <!--<div class="nk-blog-post nk-blog-post-border-bottom">
                                     <a href="blog-article.html" class="nk-post-img">
                                         <img src="assets/images/post-6-fw.jpg" alt="At first, for some time, I was not able to answer">
 
@@ -935,19 +937,19 @@
                                     <div class="nk-post-text">
                                         <p>This little wandering journey, without settled place of abode, had been so unpleasant to me, that my own house, as I called it to myself, was a perfect settlement to me compared to that...</p>
                                     </div>
-                                </div>
+                                </div>-->
 
 
 
                                 <!-- END: Adventure Tab -->
-                                <div class="nk-gap"></div>
+                                <!--<div class="nk-gap"></div>
                             </div>
                             <div role="tabpanel" class="tab-pane fade" id="tabs-1-5">
-                                <div class="nk-gap"></div>
+                                <div class="nk-gap"></div>-->
                                 <!-- START: Racing Tab -->
 
 
-                                <div class="nk-blog-post nk-blog-post-border-bottom">
+                                <!--<div class="nk-blog-post nk-blog-post-border-bottom">
                                     <a href="blog-article.html" class="nk-post-img">
                                         <img src="assets/images/post-7-fw.jpg" alt="At length one of them called out in a clear">
 
@@ -1017,19 +1019,19 @@
                                             </div>
                                         </div>
                                     </div>
-                                </div>
+                                </div>-->
 
 
 
                                 <!-- END: Racing Tab -->
-                                <div class="nk-gap"></div>
+                                <!--<div class="nk-gap"></div>
                             </div>
                             <div role="tabpanel" class="tab-pane fade" id="tabs-1-6">
-                                <div class="nk-gap"></div>
+                                <div class="nk-gap"></div>-->
                                 <!-- START: Indie Tab -->
 
 
-                                <div class="nk-blog-post nk-blog-post-border-bottom">
+                                <!--<div class="nk-blog-post nk-blog-post-border-bottom">
                                     <a href="blog-article.html" class="nk-post-img">
                                         <img src="assets/images/post-5-fw.jpg" alt="He made his passenger captain of one">
 
@@ -1047,15 +1049,15 @@
                                     <div class="nk-post-text">
                                         <p>Just then her head struck against the roof of the hall: in fact she was now more than nine feet high, and she at once took up the little golden key and hurried off to the garden door...</p>
                                     </div>
-                                </div>
+                                </div>-->
 
 
 
                                 <!-- END: Indie Tab -->
-                                <div class="nk-gap"></div>
+                                <!--<div class="nk-gap"></div>
                             </div>
                         </div>
-                    </div>
+                    </div>-->
                     <!-- END: Tabbed News -->
                     <!-- START: Latest Pictures -->
                     <div class="nk-gap"></div>
@@ -1202,7 +1204,7 @@
                     </div>
                     <!-- END: Best Selling -->
                 </div>
-                <div class="col-lg-4">
+                <!--<div class="col-lg-4">-->
                     <!--
                         START: Sidebar
 
@@ -1211,7 +1213,7 @@
                             .nk-sidebar-right
                             .nk-sidebar-sticky
                     -->
-                    <aside class="nk-sidebar nk-sidebar-right nk-sidebar-sticky">
+                    <!--<aside class="nk-sidebar nk-sidebar-right nk-sidebar-sticky">
                         <div class="nk-widget">
                             <div class="nk-widget-content">
                                 <form action="#" class="nk-form nk-form-style-1" novalidate="novalidate">
@@ -1224,7 +1226,7 @@
                         </div>
                         <div class="nk-widget nk-widget-highlighted">
                             <h4 class="nk-widget-title"><span><span class="text-main-1">We</span> Are Social</span></h4>
-                            <div class="nk-widget-content">
+                            <div class="nk-widget-content">-->
                                 <!--
                                     Social Links 3
 
@@ -1234,7 +1236,7 @@
                                         .nk-social-links-cols-3
                                         .nk-social-links-cols-2
                                 -->
-                                <ul class="nk-social-links-3 nk-social-links-cols-4">
+                                <!--<ul class="nk-social-links-3 nk-social-links-cols-4">
                                     <li><a class="nk-social-twitch" href="#"><span class="fab fa-twitch"></span></a></li>
                                     <li><a class="nk-social-instagram" href="#"><span class="fab fa-instagram"></span></a></li>
                                     <li><a class="nk-social-facebook" href="#"><span class="fab fa-facebook"></span></a></li>
@@ -1242,7 +1244,7 @@
                                     <li><a class="nk-social-youtube" href="#"><span class="fab fa-youtube"></span></a></li>
                                     <li><a class="nk-social-twitter" href="#" target="_blank"><span class="fab fa-twitter"></span></a></li>
                                     <li><a class="nk-social-pinterest" href="#"><span class="fab fa-pinterest-p"></span></a></li>
-                                    <li><a class="nk-social-rss" href="#"><span class="fa fa-rss"></span></a></li>
+                                    <li><a class="nk-social-rss" href="#"><span class="fa fa-rss"></span></a></li>-->
 
                                     <!-- Additional Social Buttons
                                         <li><a class="nk-social-behance" href="#"><span class="fab fa-behance"></span></a></li>
@@ -1267,7 +1269,7 @@
                                         <li><a class="nk-social-vk" href="#"><span class="fab fa-vk"></span></a></li>
                                         <li><a class="nk-social-wordpress" href="#"><span class="fab fa-wordpress"></span></a></li>
                                     -->
-                                </ul>
+                                <!--</ul>
                             </div>
                         </div>
                         <div class="nk-widget nk-widget-highlighted">
@@ -1474,7 +1476,7 @@
                             </div>
                         </div>
 
-                    </aside>
+                    </aside>-->
                     <!-- END: Sidebar -->
                 </div>
             </div>
