--- a/FowlerSite/Views/Home/Index.cshtml
+++ b/FowlerSite/Views/Home/Index.cshtml
@@ -59,11 +59,13 @@
                             </a>
                         </li>
                         <li>
+                            <a asp-controller="Store" asp-action="StoreCart" asp-route-id="null">
                             <span class="nk-cart-toggle">
                                 <span class="fa fa-shopping-cart"></span>
-                                <span class="nk-badge">27</span>
+                                @*<span class="nk-badge"></span>*@
                             </span>
-                            <div class="nk-cart-dropdown">
+                            </a>
+                            @*<div class="nk-cart-dropdown">
 
                                 <div class="nk-widget-post">
                                     <a asp-action="StoreProduct" class="nk-post-image">
@@ -93,7 +95,7 @@
                                 <div class="text-center">
                                     <a asp-controller="Store" asp-action="StoreCheckout" class="nk-btn nk-btn-rounded nk-btn-color-main-1 nk-btn-hover-color-white">Proceed to Checkout</a>
                                 </div>
-                            </div>
+                            </div>*@
                         </li>
 
                     </ul>
