--- a/FowlerSite/Views/Store/Index.cshtml
+++ b/FowlerSite/Views/Store/Index.cshtml
@@ -1,4 +1,5 @@
-﻿@{
+﻿@model IEnumerable<DataAccessLibrary.Models.Game>
+@{
     ViewBag.Title = "Index";
 }
 
@@ -100,41 +101,43 @@
 
 
                         <li>
-                            <span class="nk-cart-toggle">
-                                <span class="fa fa-shopping-cart"></span>
-                                <span class="nk-badge">27</span>
-                            </span>
-                            <div class="nk-cart-dropdown">
+                            <a asp-controller="Store" asp-action="StoreCart" asp-route-id="null">
+                                <span>
+                                    <span class="fa fa-shopping-cart"></span>
+                                    @*<span class="nk-badge"></span>*@
+                                </span>
+                            </a>
+                            @*<div class="nk-cart-dropdown">
 
-                                <div class="nk-widget-post">
-                                    <a asp-action="StoreProduct" class="nk-post-image">
-                                        <img src="~/assets/images/product-5-xs.jpg" alt="In all revolutions of">
-                                    </a>
-                                    <h3 class="nk-post-title">
-                                        <a href="#" class="nk-cart-remove-item"><span class="ion-android-close"></span></a>
-                                        <a asp-action="StoreProduct">In all revolutions of</a>
-                                    </h3>
-                                    <div class="nk-gap-1"></div>
-                                    <div class="nk-product-price">$ 23.00</div>
-                                </div>
+                                    <div class="nk-widget-post">
+                                        <a asp-action="StoreProduct" class="nk-post-image">
+                                            <img src="~/assets/images/product-5-xs.jpg" alt="In all revolutions of">
+                                        </a>
+                                        <h3 class="nk-post-title">
+                                            <a href="#" class="nk-cart-remove-item"><span class="ion-android-close"></span></a>
+                                            <a asp-action="StoreProduct">In all revolutions of</a>
+                                        </h3>
+                                        <div class="nk-gap-1"></div>
+                                        <div class="nk-product-price">$ 23.00</div>
+                                    </div>
 
-                                <div class="nk-widget-post">
-                                    <a asp-action="StoreProduct" class="nk-post-image">
-                                        <img src="~/assets/images/product-7-xs.jpg" alt="With what mingled joy">
-                                    </a>
-                                    <h3 class="nk-post-title">
-                                        <a href="#" class="nk-cart-remove-item"><span class="ion-android-close"></span></a>
-                                        <a asp-action="StoreProduct">With what mingled joy</a>
-                                    </h3>
-                                    <div class="nk-gap-1"></div>
-                                    <div class="nk-product-price">$ 14.00</div>
-                                </div>
+                                    <div class="nk-widget-post">
+                                        <a asp-action="StoreProduct" class="nk-post-image">
+                                            <img src="~/assets/images/product-7-xs.jpg" alt="With what mingled joy">
+                                        </a>
+                                        <h3 class="nk-post-title">
+                                            <a href="#" class="nk-cart-remove-item"><span class="ion-android-close"></span></a>
+                                            <a asp-action="StoreProduct">With what mingled joy</a>
+                                        </h3>
+                                        <div class="nk-gap-1"></div>
+                                        <div class="nk-product-price">$ 14.00</div>
+                                    </div>
 
-                                <div class="nk-gap-2"></div>
-                                <div class="text-center">
-                                    <a asp-action="StoreCheckout" class="nk-btn nk-btn-rounded nk-btn-color-main-1 nk-btn-hover-color-white">Proceed to Checkout</a>
-                                </div>
-                            </div>
+                                    <div class="nk-gap-2"></div>
+                                    <div class="text-center">
+                                        <a asp-action="StoreCheckout" class="nk-btn nk-btn-rounded nk-btn-color-main-1 nk-btn-hover-color-white">Proceed to Checkout</a>
+                                    </div>
+                                </div>*@
                         </li>
 
                     </ul>
