--- a/FowlerSite/Views/Store/StoreProduct.cshtml
+++ b/FowlerSite/Views/Store/StoreProduct.cshtml
@@ -135,11 +135,13 @@
 
 
                         <li>
-                            <span class="nk-cart-toggle">
-                                <span class="fa fa-shopping-cart"></span>
-                                <span class="nk-badge">27</span>
-                            </span>
-                            <div class="nk-cart-dropdown">
+                            <a asp-controller="Store" asp-action="StoreCart" asp-route-id="null" class="nk-cart-toggle">
+                                <span>
+                                    <span class="fa fa-shopping-cart"></span>
+                                    @*<span class="nk-badge">27</span>*@
+                                </span>
+                            </a>
+                            @*<div class="nk-cart-dropdown">
 
                                 <div class="nk-widget-post">
                                     <a asp-action="StoreProduct" class="nk-post-image">
@@ -169,7 +171,7 @@
                                 <div class="text-center">
                                     <a asp-action="StoreCheckout" class="nk-btn nk-btn-rounded nk-btn-color-main-1 nk-btn-hover-color-white">Proceed to Checkout</a>
                                 </div>
-                            </div>
+                            </div>*@
                         </li>
 
                     </ul>
