tf-03. Remove product functionality added to the cart. Deletes data in table and removes the displayed game from the view.

--- a/FowlerSite/Views/Home/Index.cshtml
+++ b/FowlerSite/Views/Home/Index.cshtml
@@ -59,7 +59,7 @@
                             </a>
                         </li>
                         <li>
-                            <a asp-controller="Store" asp-action="StoreCart" asp-route-id="null">
+                            <a asp-controller="Store" asp-action="StoreCart" asp-route-id="0">
                             <span class="nk-cart-toggle">
                                 <span class="fa fa-shopping-cart"></span>
                                 @*<span class="nk-badge"></span>*@
