--- a/FowlerSite/Views/Store/Index.cshtml
+++ b/FowlerSite/Views/Store/Index.cshtml
@@ -101,7 +101,7 @@
 
 
                         <li>
-                            <a asp-controller="Store" asp-action="StoreCart" asp-route-id="null">
+                            <a asp-controller="Store" asp-action="StoreCart" asp-route-id="0">
                                 <span>
                                     <span class="fa fa-shopping-cart"></span>
                                     @*<span class="nk-badge"></span>*@
