--- a/FowlerSite/Views/Home/Index.cshtml
+++ b/FowlerSite/Views/Home/Index.cshtml
@@ -60,42 +60,42 @@
                         </li>
                         <li>
                             <a asp-controller="Store" asp-action="StoreCart" asp-route-id="0">
-                            <span class="nk-cart-toggle">
-                                <span class="fa fa-shopping-cart"></span>
-                                @*<span class="nk-badge"></span>*@
-                            </span>
+                                <span class="nk-cart-toggle">
+                                    <span class="fa fa-shopping-cart"></span>
+                                    @*<span class="nk-badge"></span>*@
+                                </span>
                             </a>
                             @*<div class="nk-cart-dropdown">
 
-                                <div class="nk-widget-post">
-                                    <a asp-action="StoreProduct" class="nk-post-image">
-                                        <img src="assets/images/product-5-xs.jpg" alt="In all revolutions of">
-                                    </a>
-                                    <h3 class="nk-post-title">
-                                        <a href="#" class="nk-cart-remove-item"><span class="ion-android-close"></span></a>
-                                        <a asp-action="StoreProduct">In all revolutions of</a>
-                                    </h3>
-                                    <div class="nk-gap-1"></div>
-                                    <div class="nk-product-price">$ 23.00</div>
-                                </div>
+                                    <div class="nk-widget-post">
+                                        <a asp-action="StoreProduct" class="nk-post-image">
+                                            <img src="assets/images/product-5-xs.jpg" alt="In all revolutions of">
+                                        </a>
+                                        <h3 class="nk-post-title">
+                                            <a href="#" class="nk-cart-remove-item"><span class="ion-android-close"></span></a>
+                                            <a asp-action="StoreProduct">In all revolutions of</a>
+                                        </h3>
+                                        <div class="nk-gap-1"></div>
+                                        <div class="nk-product-price">$ 23.00</div>
+                                    </div>
 
-                                <div class="nk-widget-post">
-                                    <a asp-action="StoreProduct" class="nk-post-image">
-                                        <img src="assets/images/product-7-xs.jpg" alt="With what mingled joy">
-                                    </a>
-                                    <h3 class="nk-post-title">
-                                        <a href="#" class="nk-cart-remove-item"><span class="ion-android-close"></span></a>
-                                        <a asp-action="StoreProduct">With what mingled joy</a>
-                                    </h3>
-                                    <div class="nk-gap-1"></div>
-                                    <div class="nk-product-price">$ 14.00</div>
-                                </div>
+                                    <div class="nk-widget-post">
+                                        <a asp-action="StoreProduct" class="nk-post-image">
+                                            <img src="assets/images/product-7-xs.jpg" alt="With what mingled joy">
+                                        </a>
+                                        <h3 class="nk-post-title">
+                                            <a href="#" class="nk-cart-remove-item"><span class="ion-android-close"></span></a>
+                                            <a asp-action="StoreProduct">With what mingled joy</a>
+                                        </h3>
+                                        <div class="nk-gap-1"></div>
+                                        <div class="nk-product-price">$ 14.00</div>
+                                    </div>
 
-                                <div class="nk-gap-2"></div>
-                                <div class="text-center">
-                                    <a asp-controller="Store" asp-action="StoreCheckout" class="nk-btn nk-btn-rounded nk-btn-color-main-1 nk-btn-hover-color-white">Proceed to Checkout</a>
-                                </div>
-                            </div>*@
+                                    <div class="nk-gap-2"></div>
+                                    <div class="text-center">
+                                        <a asp-controller="Store" asp-action="StoreCheckout" class="nk-btn nk-btn-rounded nk-btn-color-main-1 nk-btn-hover-color-white">Proceed to Checkout</a>
+                                    </div>
+                                </div>*@
                         </li>
 
                     </ul>
@@ -357,7 +357,6 @@
                 </div>
             </div>
             <!-- END: Latest Additions -->
-
             <!-- START: Latest Pictures -->
             <div class="nk-gap"></div>
             <h2 class="nk-decorated-h-2 h3"><span><span class="text-main-1">Latest</span> Pictures</span></h2>
@@ -603,7 +602,6 @@
         </div>
     </footer>
     <!-- END: Footer -->
-
     <!-- START: Page Background -->
 
     <img class="nk-page-background-top" src="assets/images/bg-top.png" alt="">
@@ -685,7 +683,68 @@
             </div>
         </div>
     </div>
+    <!-- END: Login Modal -->
+    <!-- START: Scripts -->
+    <!-- Object Fit Polyfill -->
+    <script src="~/assets/vendor/object-fit-images/dist/ofi.min.js"></script>
 
+    <!-- GSAP -->
+    <script src="~/assets/vendor/gsap/src/minified/TweenMax.min.js"></script>
+    <script src="~/assets/vendor/gsap/src/minified/plugins/ScrollToPlugin.min.js"></script>
+
+    <!-- Popper -->
+    <script src="~/assets/vendor/popper.js/dist/umd/popper.min.js"></script>
+
+    <!-- Bootstrap -->
+    <script src="~/assets/vendor/bootstrap/dist/js/bootstrap.min.js"></script>
+
+    <!-- Sticky Kit -->
+    <script src="~/assets/vendor/sticky-kit/dist/sticky-kit.min.js"></script>
+
+    <!-- Jarallax -->
+    <script src="~/assets/vendor/jarallax/dist/jarallax.min.js"></script>
+    <script src="~/assets/vendor/jarallax/dist/jarallax-video.min.js"></script>
+
+    <!-- imagesLoaded -->
+    <script src="~/assets/vendor/imagesloaded/imagesloaded.pkgd.min.js"></script>
+
+    <!-- Flickity -->
+    <script src="~/assets/vendor/flickity/dist/flickity.pkgd.min.js"></script>
+
+    <!-- Photoswipe -->
+    <script src="~/assets/vendor/photoswipe/dist/photoswipe.min.js"></script>
+    <script src="~/assets/vendor/photoswipe/dist/photoswipe-ui-default.min.js"></script>
+
+    <!-- Jquery Validation -->
+    <script src="~/assets/vendor/jquery-validation/dist/jquery.validate.min.js"></script>
+
+    <!-- Jquery Countdown + Moment -->
+    <script src="~/assets/vendor/jquery-countdown/dist/jquery.countdown.min.js"></script>
+    <script src="~/assets/vendor/moment/min/moment.min.js"></script>
+    <script src="~/assets/vendor/moment-timezone/builds/moment-timezone-with-data.min.js"></script>
+
+    <!-- Hammer.js -->
+    <script src="~/assets/vendor/hammerjs/hammer.min.js"></script>
+
+    <!-- NanoSroller -->
+    <script src="~/assets/vendor/nanoscroller/bin/javascripts/jquery.nanoscroller.js"></script>
+
+    <!-- SoundManager2 -->
+    <script src="~/assets/vendor/soundmanager2/script/soundmanager2-nodebug-jsmin.js"></script>
+
+    <!-- Seiyria Bootstrap Slider -->
+    <script src="~/assets/vendor/bootstrap-slider/dist/bootstrap-slider.min.js"></script>
+
+    <!-- Summernote -->
+    <script src="~/assets/vendor/summernote/dist/summernote-bs4.min.js"></script>
+
+    <!-- nK Share -->
+    <script src="~/assets/Plugins/nk-share/nk-share.js"></script>
+
+    <!-- GoodGames -->
+    <script src="~/assets/js/goodgames.min.js"></script>
+    <script src="~/assets/js/goodgames-init.js"></script>
+    <!-- END: Scripts -->
 </body>
 </html>
 
